--- a/MedHelpApi/appsettings.json
+++ b/MedHelpApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MedhelpConnection": "Server=localhost; Database = Medhelp; User=sa; Password=pssWord#24; Truest Server Certificate=True"
+  }
 }
