First Databse update

--- a/MedHelpApi/appsettings.json
+++ b/MedHelpApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MedhelpConnection": "Server=localhost; Database = Medhelp; User=sa; Password=pssWord#24; Truest Server Certificate=True"
+    "MedhelpConnection": "Server=localhost; Database = Medhelp; User=sa; Password=pssWord#24; Trust Server Certificate=True"
   }
 }
